lab2/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
spec:
  rules:
  - host: osboxes
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: crud-app
              port:
                number: 8888
